updated - examination module

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,10 +4,10 @@
     "singleQuote": true,
     "tabWidth": 4,
     "trailingComma": "all",
-    "plugins": ["prettier-plugin-blade", "prettier-plugin-tailwindcss"],
+    "plugins": ["prettier-plugin-blade", "prettier-plugin-tailwindcss", "@prettier/plugin-php"],
     "overrides": [
         {
-            "files": ["*.blade.php"],
+            "files": ["*.blade.php", "*.php"],
             "options": {
                 "parser": "blade"
             }
